Fix various icon alignment issues
Port baab58c80b5e98c705e63cfb9d8c496269c58227 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/modal.scss
+++ b/app/javascript/flavours/polyam/styles/components/modal.scss
@@ -499,6 +499,10 @@
     padding-inline-end: 10px;
   }
 
+  .icon {
+    vertical-align: middle;
+  }
+
   .button {
     flex: 0 0 auto;
   }
