--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -620,7 +620,7 @@
   .icon {
     width: 14px;
     height: 14px;
-    position: relative;
+    vertical-align: middle;
   }
 }
 
@@ -1079,6 +1079,7 @@ a.status-card {
 
     .icon {
       color: $dark-text-color;
+      vertical-align: middle;
     }
   }
 }
